--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,7 +28,7 @@ if (keystorePropertiesFile.exists()) {
 }
 android {
     namespace "com.user.sulah"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 34
 //    ndkVersion flutter.ndkVersion
     ndkVersion "25.1.8937393"
 
@@ -43,8 +43,8 @@ android {
         applicationId "com.user.sulah"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 21
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 22
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
