--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,14 +53,14 @@ android {
         release {
             keyAlias keystoreProperties['keyAlias']
             keyPassword keystoreProperties['keyPassword']
-            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-            storePassword keystoreProperties['storePassword']
+//            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+//            storePassword keystoreProperties['storePassword']
         }
     }
     buildTypes {
         release {
-            signingConfig signingConfigs.release
-//            signingConfig signingConfigs.debug
+//            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
         }
     }
 
