--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=655506555
 keyPassword=655506555
 keyAlias=upload
-storeFile=F:/Flutter_freelance_apps/khedmaty-main/android/upload-keystore.jks
+storeFile=C:/Users/AbdoE/SulahApp/android/upload-keystore.jks
